Adding tab informations - fixing stuffW